--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -11,7 +11,7 @@ default: &default
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  resolved_paths: []
+  resolved_paths: ['app/assets'] #https://gist.github.com/nachozt/799a54c1bba79975bdcfd4f67226ce22
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
